--- a/Basics.html
+++ b/Basics.html
@@ -38,7 +38,7 @@
         </div>
         <div class="box right">
             <h1>BASICS</h1>
-            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates illo id mollitia porro quas natus nostrum quisquam. Sequi dolorem cum qui voluptatum alias fugiat illo nam odit, earum cumque nesciunt?</p>
+            <p class="paragraph">Lorem ipum dolor sit amet consectetur adipisicing elit. Voluptates illo id mollitia porro quas natus nostrum quisquam. Sequi dolorem cum qui voluptatum alias fugiat illo nam odit, earum cumque nesciunt?</p>
         </div>
     </div>
 </div>
